src/scss/recit/_general.scss
/*******************
Bodys
*******************/
html{
    background-color: #f7f7f7;
}

body{
    font-family: $font-family-text; 
    font-size: $font-family-text-size;
    background-color: #f7f7f7 !important;
	color: $body-color;
    counter-reset: arts-tab-counter;
    -webkit-font-smoothing: antialiased;
    counter-reset: arts-tab-counter; /* Set "my-sec-counter" to 0 */

    // on veut pas que le scroll s'affiche sur le contenu de la page
    // il faut pas qu'il soit hidden sinon le menu flotant ne s'affiche pas au complet
    #page-content{
        overflow: inherit;
    }
}

#page-enrol-index {
    #region-main {
        .generalbox {
            float: left;
            width: 30%;
        }
        .generalbox:last-of-type {
            width: 70%;
            padding-left: 2rem;
            padding-right: 2rem;
        }
    }
}

@media (min-width: 576px){
    #region-main {
        border: none;
    }
}

/*******************
Pages
*******************/
#page-wrapper {
    position: relative;
    margin-top: $top-navbar-height;
    min-height: calc(100vh - #{$top-navbar-height});
    #page{
        max-width: $page-max-width;
        background-color: #FFF;
        margin: auto;
        width: 100%;
    }
}


.pagelayout-maintenance{
    #page-wrapper{
        #page{
            padding: 2rem;
        }
    }
}

#page-admin-index.pagelayout-maintenance {
    margin-left: 0;

    #page-wrapper::after {
        min-height: inherit;        
    }
}

#page-footer {
    width: 100%;
}

// ceci est le #page-content de la page principale (ce n'est pas un iframe genre le plug-in h5p)
body.pagelayout-course, body.pagelayout-coursecategory, body.pagelayout-incourse, 
body.pagelayout-admin, body.pagelayout-frontpage, body.pagelayout-mydashboard,
body.pagelayout-base, body.pagelayout-report, body.pagelayout-standard, body.pagelayout-mypublic {
    #page-content{
        display: flex; flex-wrap: wrap; overflow-x: auto;
        // padding-left: 15px; padding-right: 15px;
        #region-main-box{
            width: 100%;
            background-color: #FFF;
            padding: 0px;
            #region-main > .card{
                border: none;
                border-radius: 0px;
                .card-body{
                    padding: 1rem; // main padding of the content container                    

                    .activity-title-container{
                        display: grid; grid-template-columns: 70% 30%; margin-top: 1.5rem; margin-bottom: 1rem;
                        .activity-title{font-size: 36px; }
                        .activity-controls{display: flex; justify-content: flex-end; align-items: center;}
                    }

                    .activity-nav{
                        .prevlink{
                            grid-area: prevlink; justify-self: start; width: 100%;
                            button:nth-child(2){width: 100%; border: 1px solid #efefef;}
                        }
                        .nextlink{
                            grid-area: nextlink; justify-self: end; width: 100%;
                            button:nth-child(1){width: 100%; border: 1px solid #efefef;}
                        }
                        .activitylist{grid-area: activitylist; justify-self: stretch;}
                        display: grid; grid-gap: 2rem; grid-template-columns: calc(33% - 2rem) 34% calc(33% - 2rem); grid-template-areas: "prevlink activitylist nextlink";
                        
                    }
                }
            }
        }
    }

    #frontpage-available-course-list, #frontpage-category-names, #frontpage-category-combo, #site-news-forum{padding: 1rem;}
}

// this is necessary to make work for columns that freeze on the grader report
body.pagelayout-report{
    #page-content{
        overflow-x: inherit!important;
    }
}
// ceci est des #page-content des iframes (genre h5p) et le display doit être bloc pour rétablir la largeur pour l'affichage
body.pagelayout-embedded{
    #page-content{
        display: block; 
    }
}

/* Third party plugins compatibility. */
/* Course format grid */
#gridshadebox_content {
    top: 80px !important;
}

.popover .arrow {
    bottom: -8px;
}

.navbar {
    box-shadow: 0 2px 4px rgba(0, 0, 0, .08);
}

#page-footer{
    max-width: $page-max-width;
    margin: auto;

    .infolink-list{
        list-style: none; padding: 0; margin: 0; line-height: 30px;
    }  

    .social-media-list{
        display: flex; list-style: none; padding: 0; margin: 0;
        .social-media-item {
            display: flex;
            align-items: center;
            justify-content: center;
            width: 30px;
            height: 30px;
            border: 1px solid #fff;
            margin: .3rem;
        }
    }    
}

.guestbanner {
    width: 100%;
    padding: 10px;
    background-color: #cce6ea;
    p {
        text-align: center;
        margin-bottom: 0;
        font-weight: bold;
        font-size: 16px;
    }
}

